@@ -354,6 +354,9 @@ EC_TAG_SELECT_PREFS                       0x1000
 		EC_TAG_IPFILTER_LEVEL                     0x1C06
 		EC_TAG_IPFILTER_FILTER_LAN                0x1C07
 		EC_TAG_SECURITY_USE_SECIDENT              0x1C08
+		EC_TAG_SECURITY_OBFUSCATION_SUPPORTED     0x1C09
+		EC_TAG_SECURITY_OBFUSCATION_REQUESTED     0x1C0A
+		EC_TAG_SECURITY_OBFUSCATION_REQUIRED      0x1C0B
 
 	EC_TAG_PREFS_CORETWEAKS                   0x1D00
 		EC_TAG_CORETW_MAX_CONN_PER_FIVE           0x1D01
