@@ -305,6 +305,9 @@ public final static short 		EC_TAG_IPFILTER_UPDATE_URL                = 0x1C05;
 public final static short 		EC_TAG_IPFILTER_LEVEL                     = 0x1C06;
 public final static short 		EC_TAG_IPFILTER_FILTER_LAN                = 0x1C07;
 public final static short 		EC_TAG_SECURITY_USE_SECIDENT              = 0x1C08;
+public final static short 		EC_TAG_SECURITY_OBFUSCATION_SUPPORTED     = 0x1C09;
+public final static short 		EC_TAG_SECURITY_OBFUSCATION_REQUESTED     = 0x1C0A;
+public final static short 		EC_TAG_SECURITY_OBFUSCATION_REQUIRED      = 0x1C0B;
 public final static short 	EC_TAG_PREFS_CORETWEAKS                   = 0x1D00;
 public final static short 		EC_TAG_CORETW_MAX_CONN_PER_FIVE           = 0x1D01;
 public final static short 		EC_TAG_CORETW_VERBOSE                     = 0x1D02;
